[tool.poetry]
name = "helpdesk-app-flet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
lmstudio = "^1.0.0"
flet = "^0.28.2"
numpy = "^2.2.6"

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "^0.28.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
